upgrading to hadoop 3 and adding over-the-wire encryption tests